--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Projetos</h1>
 <br>
-<a href="https://jason509.github.io/alura-cursos/projeto-pong/pong.html"><h3>pong-game</h3></a>
+<a href="https://jand-s.github.io/alura-cursos/projeto-pong/pong.html"><h3>pong-game</h3></a>
