--- a/alura-cursos/projeto-pong/pong.html
+++ b/alura-cursos/projeto-pong/pong.html
@@ -11,5 +11,6 @@
 </body>
     <script src='p5.js'></script>
     <script src="p5.collide2d.js"></script>
+    <script src="p5.sound.min.js"></script>
     <script src="p5-pong.js"></script>
 </html>
