--- a/alura-cursos/projeto-freeway/index.html
+++ b/alura-cursos/projeto-freeway/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Pong-Game</title>
+    <title>Freeway-Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
@@ -12,5 +12,5 @@
     <script src='../p5/p5.js'></script>
     <script src="../p5/p5.collide2d.js"></script>
     <script src="../p5/p5.sound.min.js"></script>
-    <script src="p5-pong.js"></script>
+    <script src="p5-freeway.js"></script>
 </html>
