--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Projetos</h1>
 <br>
-<a href="https://jand-s.github.io/alura-cursos/projeto-pong/pong.html"><h3>pong-game</h3></a>
+<a href="alura-cursos/projeto-pong/pong.html"><h3>pong-game</h3></a>
 <br>
-<a href="https://jand-s.github.io/alura-cursos/projeto-freeway/freeway.html"><h3>freeway-game</h3></a>
+<a href="alura-cursos/projeto-freeway/freeway.html"><h3>freeway-game</h3></a>
