--- a/alura-cursos/projeto-freeway/freeway.html
+++ b/alura-cursos/projeto-freeway/freeway.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <title>Freeway-Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    
 </body>
     <script src='../p5/p5.js'></script>
     <script src="../p5/p5.collide2d.js"></script>
     <script src="../p5/p5.sound.min.js"></script>
     <script src="p5-freeway.js"></script>
+    <script src="images.js"></script>
+    <script src="tortoise.js"></script>
+    <script src="car.js"></script>
 </html>
