--- a/alura-cursos/projeto-pong/pong.html
+++ b/alura-cursos/projeto-pong/pong.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <title>Pong-Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
