--- a/alura-cursos/projeto-freeway/freeway.html
+++ b/alura-cursos/projeto-freeway/freeway.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta charset="UTF-8">
     <meta content="utf-8" http-equiv="encoding">
     <title>Freeway-Game</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
