alterando o visual da pagina

--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
-<h1>Projetos</h1>
-<br>
-<a href="alura-cursos/projeto-pong/pong.html"><h3>pong-game</h3></a>
-<br>
-<a href="alura-cursos/projeto-freeway/freeway.html"><h3>freeway-game</h3></a>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <div class="content">
+            <div class="name-project">
+                <a href="alura-cursos/projeto-pong/pong.html" class="project-hover">
+                    <h3>Projeto Pong</h3>
+                    <img class="image-project" src="images/pong.png">
+                </a>
+            </div>
+            <div class="name-project">
+                <a href="alura-cursos/projeto-freeway/freeway.html" class="project-hover">
+                    <h3>Projeto Freeway</h3>
+                    <img class="image-project" src="images/freeway.png">
+                </a>
+            </div>
+        </div>
+
+    </div>
+</body>
+</html>
