--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                     <img class="image-project" src="images/freeway.png">
                 </a>
             </div>
+            <div class="name-project">
+                <a href="alura-cursos/logica-de-programacao-1/logica-1.html" class="project-hover">
+                    <h3>Projeto Lógica de Programação</h3>
+                    <img class="image-project" src="images/logica-de-programacao.png">
+                </a>
+            </div>
         </div>
 
     </div>
