--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                     <img class="image-project" src="images/logica-de-programacao.png">
                 </a>
             </div>
+            <div class="name-project">
+                <a href="alura-cursos/html-css/html-css-projetos.html" class="project-hover">
+                    <h3>HTML5 e CSS3 - alura</h3>
+                    <img class="image-project" style="max-width: 150px;" src="images/HTML5-CSS3.svg">
+                </a>
+            </div>
         </div>
 
     </div>
