adicioando banner, layout e pagina

--- a/alura-cursos/html-css/projetos/parte-1.html
+++ b/alura-cursos/html-css/projetos/parte-1.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="css/parte-1.css">
 </head>
 <body>
-    <header></header>
+    <div class="container">
+        <header>
+            <nav>
+            </nav>
+        </header>
+        <section>
+            
+            <div>
+                <h1>Sobre a Barbearia Alura</h1>
+            </div>
+            <div class="banner">
+                <a href="">
+                    <img src="banner-barb.jpg">
+                </a>
+            </div>
+            
+            <div class="text-container">
+                <div class="text-content">
+                    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+                    <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+                    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+                </div>
+                <div class="text-content" style="float: right;">
+                    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+                    <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+                    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+                </div>
+                <div style="clear: both;"></div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
