mudando interface e adicionando novo banner

--- a/alura-cursos/html-css/projetos/parte-1.html
+++ b/alura-cursos/html-css/projetos/parte-1.html
@@ -20,7 +20,7 @@
             </div>
             <div class="banner">
                 <a href="">
-                    <img src="banner-barb.jpg">
+                    <img src="css/barbershop.jpeg">
                 </a>
             </div>
             
