--- a/alura-cursos/html-css/projetos/parte-1.html
+++ b/alura-cursos/html-css/projetos/parte-1.html
@@ -7,16 +7,19 @@
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="css/parte-1.css">
 </head>
-<body>
+<body class="bg-gradient">
+    <header>
+        <nav>
+            <div class="nav-bar">
+            </div>
+        </nav>
+    </header>
     <div class="container">
-        <header>
-            <nav>
-            </nav>
-        </header>
+        
         <section>
             
             <div>
-                <h1>Sobre a Barbearia Alura</h1>
+                <h1 style="padding: 10px;">Sobre a Barbearia Alura</h1>
             </div>
             <div class="banner">
                 <a href="">
