--- a/alura-cursos/html-css/projetos/parte-1.html
+++ b/alura-cursos/html-css/projetos/parte-1.html
@@ -19,7 +19,7 @@
         <section>
             
             <div>
-                <h1 style="padding: 10px;">Sobre a Barbearia Alura</h1>
+                <h1 class="title" style="padding: 10px;">Sobre a Barbearia Alura</h1>
             </div>
             <div class="banner">
                 <a href="">
@@ -39,7 +39,17 @@
                     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
                 </div>
                 <div style="clear: both;"></div>
+                <div>
+                    <h2 class="sub-title">Benefícios</h1>
+                    <ul class="bg-gradient">
+                        <li class="item">Atendimento aos clientes</li>
+                        <li class="item">Espaço diferenciado</li>
+                        <li class="item">Localização</li>
+                        <li class="item">Profissionais qualificados</li>
+                    </ul>    
+                </div>
             </div>
+            
         </section>
     </div>
 </body>
