--- a/alura-cursos/html-css/projetos/parte-1.html
+++ b/alura-cursos/html-css/projetos/parte-1.html
@@ -28,12 +28,13 @@
             </div>
             
             <div class="text-container">
-                <div class="text-content">
+                <div class="text-content" style="float: left;">
                     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
                     <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
                     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
                 </div>
-                <div class="text-content" style="float: right;">
+                <img src="css/barber.jpg" style="width: 55%; float: right; border-radius: 10px;">
+                <div class="text-content" style="float: left;">
                     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
                     <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
                     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
@@ -46,7 +47,7 @@
                         <li class="item">Espaço diferenciado</li>
                         <li class="item">Localização</li>
                         <li class="item">Profissionais qualificados</li>
-                    </ul>    
+                    </ul>    '  '
                 </div>
             </div>
             
