--- a/alura-cursos/ibuy/index.html
+++ b/alura-cursos/ibuy/index.html
@@ -24,7 +24,7 @@
             <div>
                 <div class="title-destaque">Destaques</div>
                 <label for="fname">Busque por um produto:</label>
-                <div class="search-input"><input type="text" placeholder="ex: Coca-Cola" id="fname" name="fname"></div>
+                <div class="search-input"><input type="search" autocomplete="off" data-search placeholder="ex: Coca-Cola" id="fname" name="fname"></div>
             </div>
         </nav>
         <aside>
@@ -42,58 +42,58 @@
         <section>
             <div class="shopitens">
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">Arroz</span><br>
-                    R$ <span class="item-preco" data-item-preco>10,00</span><br>
+                    <img data-img-item src="imagens/xbox.jpg" alt="Xbox Series S">
+                    <span class="item-name">Xbox Series S</span><br>
+                    R$ <span class="item-preco" data-item-preco>2699,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">Coca-Cola</span><br>
-                    R$ <span class="item-preco" data-item-preco>22,00</span><br>
+                    <img data-img-item src="imagens/monitor.jpg" alt="Monitor">
+                    <span class="item-name">Monitor Full HD</span><br>
+                    R$ <span class="item-preco" data-item-preco>1979,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">Vinho</span><br>
-                    R$ <span class="item-preco" data-item-preco>9,00</span><br>
+                    <img data-img-item src="imagens/teclado.jpg" alt="Teclado Rgb">
+                    <span class="item-name">Teclado RGB</span><br>
+                    R$ <span class="item-preco" data-item-preco>229,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">M&M</span><br>
-                    R$ <span class="item-preco" data-item-preco>7,00</span><br>
+                    <img data-img-item src="imagens/mouse.jpg" alt="Mouse">
+                    <span class="item-name">Mouse</span><br>
+                    R$ <span class="item-preco" data-item-preco>119,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">Rosquinha-Coco</span><br>
-                    R$ <span class="item-preco" data-item-preco>14,00</span><br>
+                    <img data-img-item src="imagens/memoria.jpg" alt="Memória DDR4">
+                    <span class="item-name">Memória DDR4</span><br>
+                    R$ <span class="item-preco" data-item-preco>359,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">Salgadinho</span><br>
-                    R$ <span class="item-preco" data-item-preco>13,00</span><br>
+                    <img data-img-item src="imagens/ps4.jpg" alt="PlayStation 4">
+                    <span class="item-name">PlayStation 4</span><br>
+                    R$ <span class="item-preco" data-item-preco>2599,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">Combo-Frutas</span><br>
-                    R$ <span class="item-preco" data-item-preco>32,00</span><br>
+                    <img data-img-item src="imagens/ssd.jpg" alt="SSD 120GB">
+                    <span class="item-name">SSD 120GB</span><br>
+                    R$ <span class="item-preco" data-item-preco>159,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
                 <div class="item">
-                    <img src="imagens/placeholder.jpg">
-                    <span class="item-name">Bife</span><br>
-                    R$ <span class="item-preco" data-item-preco>10,00</span><br>
+                    <img data-img-item src="imagens/placa_mae.jpg" alt="Placa-Mãe">
+                    <span class="item-name">Placa-Mãe</span><br>
+                    R$ <span class="item-preco" data-item-preco>759,00</span><br>
                     <input class="item-input" type="number" value="1" min="1" max="99">
                     <button class="button-item" data-comprar-button>Comprar</button>
                 </div>
